--- a/src/shared/ui/Navigation/Navigation.module.scss
+++ b/src/shared/ui/Navigation/Navigation.module.scss
@@ -36,7 +36,7 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: -0.274286px;
-  color: $color-black;
+  color: var(--primary-color);
   transition: color 0.2s ease;
 
   &:hover {
