--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -2,4 +2,7 @@
   --bg-color: #000;
   --primary-color: #fff;
   --secondary-color: #fff;
+  --button-color: #fff;
+  --hover-color: #1c1c1c;
+  --hover-contained-button: #b09a5f;
 }
