--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -1,5 +1,8 @@
 .app_light_theme {
   --bg-color: #fff;
   --primary-color: #000;
+  --button-color: #fff;
   --secondary-color: #1a1a1a;
+  --hover-color: #e4e2e2;
+  --hover-contained-button: #b09a5f;
 }
