--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -16,7 +16,13 @@
   background: #bda76a;
   border: 2px solid #bda76a;
   border-radius: 5px;
+  color: var(--button-color);
   padding: 23px 50px;
+  transition: background 0.2s ease;
+
+  &:hover {
+    background: var(--hover-contained-button);
+  }
 }
 
 .outline {
@@ -27,6 +33,6 @@
 
   transition: background 0.2s ease;
   &:hover {
-    background: var(--bg-color);
+    background: var(--hover-color);
   }
 }
