--- a/src/shared/ui/Typography/Typography.module.scss
+++ b/src/shared/ui/Typography/Typography.module.scss
@@ -1,6 +1,8 @@
 @import "../../../styles/variables.scss";
 
 .typography {
+  text-transform: uppercase;
+  font-weight: 700;
   font-family: var(--font-mont);
 }
 
@@ -16,14 +18,15 @@
 }
 
 .medium {
+  font-size: 60px;
+  line-height: 55px;
+  letter-spacing: -1px;
 }
 
 .large {
-  font-weight: 700;
   font-size: 65px;
   line-height: 70px;
   letter-spacing: -4.24px;
-  text-transform: uppercase;
 }
 
 @media screen and (max-width: $phoneWidth) {
