--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -2,6 +2,9 @@
   --bg-color: #000;
   --primary-color: #fff;
   --secondary-color: #fff;
+  --title-cover: #000;
+  --title-cover-hover: #fff;
+
   --button-color: #fff;
   --hover-color: #1c1c1c;
   --hover-contained-button: #b09a5f;
