--- a/src/shared/ui/Banner/Banner.module.scss
+++ b/src/shared/ui/Banner/Banner.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .banner {
   margin-top: 130px;
   display: flex;
@@ -8,6 +10,10 @@
 
 .image_inner {
   position: relative;
+}
+
+.color {
+  color: $color-khaki;
 }
 
 .dots {
@@ -37,4 +43,10 @@
   font-family: var(--font-mont);
   line-height: 32px;
   color: var(--secondary-color);
+}
+
+.border {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-top: 65px;
+  margin-bottom: 100px;
 }
