--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -2,6 +2,9 @@
   --bg-color: #fff;
   --primary-color: #000;
   --button-color: #fff;
+  --title-cover: #fff;
+  --title-cover-hover: #fff;
+
   --secondary-color: #1a1a1a;
   --hover-color: #e4e2e2;
   --hover-contained-button: #b09a5f;
