--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -4,7 +4,7 @@
   --button-color: #fff;
   --title-cover: #fff;
   --title-cover-hover: #fff;
-
+  --bg-nolayout-color: #f3f3f3;
   --secondary-color: #1a1a1a;
   --hover-color: #e4e2e2;
   --hover-contained-button: #b09a5f;
