--- a/src/shared/ui/Banner/Banner.module.scss
+++ b/src/shared/ui/Banner/Banner.module.scss
@@ -27,6 +27,7 @@
   border-radius: 10px;
   z-index: 2;
   position: relative;
+  //  transform: matrix3d(0.94, 0, 0.34, 0.0002, 0, 1, 0, 0, -0.34, 0, 0.94, 0, 1, 0, 10, 1) translateX(30px);
 }
 
 .banner_right {
