--- a/src/shared/ui/OurServices/OurServices.module.scss
+++ b/src/shared/ui/OurServices/OurServices.module.scss
@@ -17,3 +17,14 @@
   grid-template-columns: repeat(5, 1fr);
   gap: 12px;
 }
+
+.our_services {
+  background: var(--bg-nolayout-color);
+}
+
+.our_services_inner {
+  max-width: 1170px;
+
+  padding: 100px 0;
+  margin: 0 auto;
+}
