--- a/src/shared/ui/BridgeBusiness/BridgeBusiness.module.scss
+++ b/src/shared/ui/BridgeBusiness/BridgeBusiness.module.scss
@@ -1,11 +1,10 @@
 @import "src/styles/variables.scss";
 
 .bridge {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
   align-items: center;
-  gap: 65px;
   margin-bottom: 100px;
+  gap: 65px;
 }
 
 .color {
@@ -19,4 +18,67 @@
   font-size: 18px;
   padding-top: 45px;
   line-height: 32px;
+}
+
+.right {
+  background: var(--bg-nolayout-color);
+  border-radius: 10px;
+  padding: 55px 0;
+  display: grid;
+  position: relative;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 33px;
+}
+
+.number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 55px;
+  white-space: pre;
+  font-family: var(--font-mont);
+  letter-spacing: -0.62px;
+  color: var(--hover-contained-button);
+  text-align: center;
+
+  position: relative;
+
+  &:after {
+    content: "";
+    width: 35px;
+    height: 2px;
+    position: absolute;
+
+    background: var(--hover-contained-button);
+    top: 60px;
+    left: 50%;
+    transform: translate(-50%);
+  }
+}
+
+.right_description {
+  color: var(--secondary-color);
+  font-family: var(--font-mont);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: -0.2px;
+  padding-top: 24px;
+}
+
+.item {
+  padding: 0 45px;
+}
+
+.data {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 26px;
+  font-family: var(--font-mont);
+  letter-spacing: -0.2px;
+  color: #898989;
+  position: absolute;
+  right: 30px;
+  bottom: 20px;
 }
