--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -4,7 +4,7 @@
   --secondary-color: #fff;
   --title-cover: #000;
   --title-cover-hover: #fff;
-
+  --color-khaki: #b09a5f;
   --button-color: #fff;
   --hover-color: #1c1c1c;
   --bg-nolayout-color: #0f0f0f;
