--- a/src/shared/ui/Typography/Typography.module.scss
+++ b/src/shared/ui/Typography/Typography.module.scss
@@ -20,6 +20,12 @@
   letter-spacing: -1.92px;
 }
 
+.title {
+  font-size: 55px;
+  line-height: 58px;
+  letter-spacing: -1.92px;
+}
+
 .mini {
   font-size: 45px;
   line-height: 58px;
