--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -2,6 +2,7 @@
   --bg-color: #000;
   --primary-color: #fff;
   --secondary-color: #fff;
+  --feedback-color: #fff;
   --title-cover: #000;
   --title-cover-hover: #fff;
   --color-khaki: #b09a5f;
