--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -7,6 +7,7 @@
   --color-khaki: #b09a5f;
   --bg-nolayout-color: #f3f3f3;
   --secondary-color: #1a1a1a;
+  --feedback-color: #141414;
   --hover-color: #e4e2e2;
   --hover-contained-button: #b09a5f;
 }
