--- a/src/shared/ui/Block/Block.module.scss
+++ b/src/shared/ui/Block/Block.module.scss
@@ -42,6 +42,35 @@
     )
     translateX(15px);
   z-index: 2;
+  object-fit: cover;
+
+  position: relative;
+}
+
+.image_reverse {
+  border-radius: 10px;
+  object-fit: cover;
+  transform: matrix3d(
+      0.94,
+      0,
+      0.34,
+      0.0002,
+      0,
+      1,
+      0,
+      0,
+      -0.34,
+      0,
+      0.94,
+      0,
+      1,
+      0,
+      10,
+      1
+    )
+    translateX(35px);
+
+  z-index: 2;
   position: relative;
 }
 
@@ -50,4 +79,21 @@
   right: 0;
   top: -30px;
   z-index: 1;
+}
+
+.dots_reverse {
+  position: absolute;
+  left: 0;
+  top: -30px;
+  z-index: 1;
+}
+
+.block_reverse {
+  display: flex;
+  gap: 50px;
+  margin: 100px 0;
+
+  flex-direction: row-reverse;
+
+  position: relative;
 }
