--- a/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
+++ b/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
@@ -3,7 +3,6 @@
 .image_banner {
   margin-top: 130px;
   display: flex;
-  align-items: center;
 }
 
 .left {
@@ -46,6 +45,7 @@
 }
 
 .button {
+  width: 250px;
   margin-top: 35px;
 }
 
