--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -6,6 +6,7 @@
   --title-cover-hover: #fff;
   --color-khaki: #b09a5f;
   --bg-nolayout-color: #f3f3f3;
+  --color-price-title: #000;
   --color-price: #bda76a;
   --secondary-color: #1a1a1a;
   --feedback-color: #141414;
