--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -7,6 +7,7 @@
   --title-cover-hover: #fff;
   --color-khaki: #b09a5f;
   --color-price: #bda76a;
+  --color-price-title: #000;
   --button-color: #fff;
   --hover-color: #1c1c1c;
   --bg-nolayout-color: #0f0f0f;
