--- a/src/shared/ui/Block/Block.module.scss
+++ b/src/shared/ui/Block/Block.module.scss
@@ -7,8 +7,22 @@
   align-items: center;
   gap: 50px;
   margin: 100px 0;
-
+  max-width: 1170px;
+  margin: 0 auto;
   position: relative;
+}
+
+.block_inner {
+}
+
+.gray {
+  background: #f3f3f3;
+  padding: 100px 0;
+}
+
+.white {
+  background: #fff;
+  padding: 100px 0;
 }
 
 .description {
@@ -110,8 +124,8 @@
 .block_reverse {
   display: flex;
   gap: 50px;
-  margin: 100px 0;
-
+  margin: 0 auto;
+  max-width: 1170px;
   flex-direction: row-reverse;
 
   position: relative;
