--- a/src/shared/ui/Slider/Slider.module.scss
+++ b/src/shared/ui/Slider/Slider.module.scss
@@ -7,5 +7,7 @@
   max-width: 1170px;
   padding: 100px 0;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
 }
