--- a/src/shared/ui/Work/Work.module.scss
+++ b/src/shared/ui/Work/Work.module.scss
@@ -11,7 +11,6 @@
 .work_inner {
   max-width: 1170px;
 
-  padding: 100px 0;
   margin: 0 auto;
 }
 
@@ -25,4 +24,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
+}
+
+.gray {
+  background: #f3f3f3;
+  padding: 100px 0;
+}
+
+.white {
+  background: #fff;
 }
