--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -29,7 +29,7 @@
 .outline {
   border: 2px solid #bda76a;
   border-radius: 5px;
-  padding: 22px 30px;
+  padding: 22px 0;
   background: var(--bg-color);
 
   transition: background 0.2s ease;
