--- a/src/shared/ui/Description/Description.module.scss
+++ b/src/shared/ui/Description/Description.module.scss
@@ -12,6 +12,14 @@
   font-family: var(--font-mont);
 }
 
+.semi_bold {
+  font-weight: 600;
+}
+
+.medium {
+  font-weight: 500;
+}
+
 .sub {
   padding-bottom: 42px;
   font-style: italic;
