--- a/src/shared/ui/Navigation/Navigation.module.scss
+++ b/src/shared/ui/Navigation/Navigation.module.scss
@@ -1,45 +1,179 @@
 @import "src/styles/variables.scss";
 
-.navigation {
-  display: flex;
-  flex-direction: column;
-  font-family: var(--font-mont);
-  align-items: flex-end;
-  gap: 25px;
-}
-
 .theme {
   display: flex;
   align-items: center;
-  gap: 22px;
+  gap: 30px;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  align-items: flex-end;
+}
+
+.lang {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.274286px;
+  font-family: var(--font-mont);
+  color: var(--primary-color);
+}
+
+.link {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: var(--font-mont);
+  letter-spacing: -0.274286px;
+  color: var(--primary-color);
+  &:hover {
+    color: #bda76a;
+  }
+  &::after {
+    content: "";
+    height: 3px;
+    width: 0;
+    background: #bda76a;
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    display: block;
+    transition: 0.3s ease;
+  }
+
+  &:hover::after {
+    width: 100%;
+    left: 0;
+  }
+}
+
+.active {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.274286px;
+  font-family: var(--font-mont);
+  color: var(--color-price);
+}
+
+.burger_btn {
+  display: none;
+}
+
+.header {
+  width: 100%;
+}
+
+.box {
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid gray;
+}
+
+.logo_image {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .menu {
   display: flex;
+  position: relative;
   align-items: center;
-
   gap: 38px;
 }
 
-.active {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: -0.274286px;
-  color: $color-khaki;
+.mobile_btn {
+  display: none;
 }
 
-.link {
+@media (max-width: $tableWidth) {
+  .item + .item {
+    padding-left: 0 !important;
+  }
+
+  .mobile_btn {
+    display: block;
+    position: absolute;
+    right: 10px;
+    top: 35px;
+    cursor: pointer;
+    z-index: 10;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    left: -100%;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #f8f8f8;
+    z-index: 10;
+    transition: left 1s;
+  }
+
+  .active {
+    left: 0;
+  }
+
+  .list li a {
+    font-size: 28px;
+  }
+}
+
+.navigation li {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.navigation li:hover > .sub_menu {
+  display: block;
+}
+
+.sub_menu {
+  background: var(--bg-color);
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.25);
+  border-radius: 10px 0px 10px 10px;
+  z-index: 2;
+  padding: 20px;
+  white-space: nowrap;
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: -100%;
+}
+
+.sub_menu_item {
+  padding: 10px 15px;
+}
+
+.sub_menu_link {
+  color: var(--primary-color);
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: -0.274286px;
-  color: var(--primary-color);
-  transition: color 0.2s ease;
+  font-family: var(--font-mont);
+  transition: color 0.3s ease;
+}
 
-  &:hover {
-    color: $color-khaki;
-  }
+.sub_menu_link:hover {
+  color: #bda76a;
+}
+
+.svg {
+  width: 6px;
+  height: 3px;
+  position: absolute;
 }
