--- a/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
+++ b/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
@@ -5,6 +5,14 @@
   display: flex;
 }
 
+.center {
+  align-items: center;
+}
+
+.start {
+  align-items: flex-start;
+}
+
 .left {
   width: 45%;
 }
