--- a/src/shared/ui/OutComes/OutComes.module.scss
+++ b/src/shared/ui/OutComes/OutComes.module.scss
@@ -2,7 +2,6 @@
   max-width: 1170px;
 
   margin: 0 auto;
-  padding-bottom: 100px;
 }
 
 .description {
@@ -23,10 +22,12 @@
   background: var(--bg-nolayout-color);
   margin-bottom: 100px;
   padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .white {
   background: var(--bg-color);
+  padding-bottom: 100px;
 }
 
 .outcomes {
@@ -37,7 +38,7 @@
 
 .items {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
   padding: 85px 0;
 }
