--- a/src/shared/ui/Price/Item/PriceItem.module.scss
+++ b/src/shared/ui/Price/Item/PriceItem.module.scss
@@ -9,6 +9,7 @@
     background: #bda76a;
     border-radius: 8px;
 
+    padding-bottom: 10px;
     .title {
       color: var(--button-color);
     }
