--- a/src/shared/ui/Awards/Awards.module.scss
+++ b/src/shared/ui/Awards/Awards.module.scss
@@ -21,5 +21,9 @@
 .card {
   background: #ffffff;
   margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 90px 0 70px 50px;
   border-radius: 10px;
 }
