--- a/src/shared/layout/layout.module.scss
+++ b/src/shared/layout/layout.module.scss
@@ -7,3 +7,11 @@
   max-width: 100%;
   margin: 0 auto;
 }
+
+.loader {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+}
