--- a/src/shared/ui/Markdown/Markdown.module.scss
+++ b/src/shared/ui/Markdown/Markdown.module.scss
@@ -1,5 +1,8 @@
 .markdown {
   font-family: var(--font-mont);
   color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   padding: 50px 0;
 }
