--- a/src/shared/ui/FeaturedPress/FeaturedPress.module.scss
+++ b/src/shared/ui/FeaturedPress/FeaturedPress.module.scss
@@ -15,4 +15,11 @@
   background: #f3f3f3;
   padding: 0 20px;
   border-radius: 10px;
+  display: grid;
+  height: 237px;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 0;
+  img {
+    mix-blend-mode: darken;
+  }
 }
