--- a/src/shared/ui/DevelopTeam/DevelopTeam.module.scss
+++ b/src/shared/ui/DevelopTeam/DevelopTeam.module.scss
@@ -1,5 +1,6 @@
 .develop {
   padding: 100px 0;
+  padding-bottom: 0;
 }
 
 .main {
@@ -53,5 +54,5 @@
   /* or 333% */
   font-family: var(--font-mont);
 
-  color: var(--secondary-color);
+  color: var(--dev-color);
 }
