--- a/src/shared/ui/ReadyToIncrease/ReadyToIncrease.module.scss
+++ b/src/shared/ui/ReadyToIncrease/ReadyToIncrease.module.scss
@@ -1,3 +1,11 @@
+.loader {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+}
+
 .ready_inner {
   max-width: 1170px;
   margin: 0 auto;
@@ -11,6 +19,7 @@
 
 .image {
   object-fit: cover;
+  mix-blend-mode: darken;
 }
 
 .gray {
@@ -35,4 +44,44 @@
       width: 220px;
     }
   }
+}
+
+.inputs {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding-bottom: 20px;
+  place-items: self-end;
+  gap: 10px;
+}
+
+.block_inner {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  gap: 2px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  font-family: var(--font-mont);
+  color: var(--secondary-color);
+}
+
+.about {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  font-family: var(--font-mont);
+
+  color: var(--secondary-color);
 }
