--- a/src/shared/ui/BridgeBusiness/BridgeBusiness.module.scss
+++ b/src/shared/ui/BridgeBusiness/BridgeBusiness.module.scss
@@ -82,3 +82,14 @@
   right: 30px;
   bottom: 20px;
 }
+
+@media screen and (max-width: $tableWidth) {
+  .bridge {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: $smTableWidth) {
+  .right {
+    grid-template-columns: auto;
+  }
+}
