--- a/src/shared/ui/Banner/Banner.module.scss
+++ b/src/shared/ui/Banner/Banner.module.scss
@@ -51,3 +51,15 @@
   margin-top: 65px;
   margin-bottom: 100px;
 }
+
+@media screen and (max-width: $tableWidth) {
+  .banner {
+    flex-direction: column;
+    padding-left: 0;
+  }
+
+  .image {
+    width: 100%;
+    height: 100%;
+  }
+}
