--- a/src/shared/ui/Block/Block.module.scss
+++ b/src/shared/ui/Block/Block.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .right {
   padding-right: 42px;
 }
@@ -160,4 +162,24 @@
 
 .right {
   text-align: right;
+}
+
+@media screen and (max-width: $smDesktopWidth) {
+  .block {
+    flex-direction: column-reverse;
+
+    img {
+      width: 100%;
+      height: 100%;
+      transform: none;
+    }
+  }
+
+  .right {
+    padding-right: 0;
+  }
+
+  .dots {
+    display: none;
+  }
 }
