--- a/src/shared/ui/Contact/Contact.module.scss
+++ b/src/shared/ui/Contact/Contact.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .contact {
   display: flex;
   margin: 80px 0;
@@ -60,4 +62,16 @@
 .map {
   width: 50%;
   height: 560px;
+}
+
+@media screen and (max-width: $smDesktopWidth) {
+  .contact {
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .map {
+    width: 100%;
+    height: 100%;
+  }
 }
