--- a/src/shared/ui/DevelopTeam/DevelopTeam.module.scss
+++ b/src/shared/ui/DevelopTeam/DevelopTeam.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .develop {
   padding: 100px 0;
   padding-bottom: 0;
@@ -55,4 +57,21 @@
   font-family: var(--font-mont);
 
   color: var(--dev-color);
+}
+
+@media screen and (max-width: $tableWidth) {
+  .main {
+    flex-direction: column;
+  }
+
+  .left {
+    padding: 0 5px;
+  }
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .list {
+    grid-template-columns: auto;
+    place-content: center;
+  }
 }
