--- a/src/shared/ui/DevelopmentProcess/DevelopmentProcess.module.scss
+++ b/src/shared/ui/DevelopmentProcess/DevelopmentProcess.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .title {
   font-weight: 700;
   font-size: 50px;
@@ -116,4 +118,30 @@
   line-height: 22px;
   color: var(--secondary-color);
   font-family: var(--font-mont);
+}
+
+@media screen and (max-width: $tableWidth) {
+  .main {
+    grid-template-columns: auto;
+  }
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .items {
+    grid-template-columns: auto;
+  }
+
+  .item {
+    &:after {
+      right: 50px;
+      top: 0;
+    }
+
+    &:nth-child(even) {
+      &:after {
+        left: 23%;
+        top: 10%;
+      }
+    }
+  }
 }
