--- a/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
+++ b/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
@@ -60,3 +60,36 @@
 .title {
   text-transform: uppercase;
 }
+
+@media screen and (max-width: $tableWidth) {
+  .image_banner {
+    margin-top: 50px;
+  }
+
+  .start {
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+
+  .left {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: $smTableWidth) {
+  .right {
+    width: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .center {
+    flex-direction: column;
+  }
+}
