--- a/src/shared/ui/Navigation/Navigation.module.scss
+++ b/src/shared/ui/Navigation/Navigation.module.scss
@@ -169,7 +169,8 @@
   display: none;
   position: absolute;
   top: 100%;
-  left: -100%;
+  right: 50%;
+  transform: translate(50%, 0);
 }
 
 .sub_menu_item {
