--- a/src/shared/ui/Slider/SlideItem/SlideItem.module.scss
+++ b/src/shared/ui/Slider/SlideItem/SlideItem.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .image {
   border-radius: 8px;
 }
@@ -21,4 +23,11 @@
   line-height: 26px;
   letter-spacing: -0.2px;
   color: var(--secondary-color);
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .image {
+    width: 100%;
+    height: 100%;
+  }
 }
