--- a/src/shared/ui/ContactInfo/ContactInfo.module.scss
+++ b/src/shared/ui/ContactInfo/ContactInfo.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   flex-direction: column;
   gap: 14px;
+  max-width: 370px;
 }
 
 .title {
@@ -23,6 +24,10 @@
   text-align: center;
   color: var(--button-color);
   font-weight: 400;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+
   font-size: 18px;
   line-height: 22px;
 }
