--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .overlay {
   position: fixed;
   top: 0;
@@ -16,9 +18,12 @@
   border-radius: 10px;
   position: relative;
   padding: 30px;
+  height: 95vh;
+  overflow-y: auto;
   max-width: 1170px;
   margin: 0 auto;
-
+  overflow-y: auto;
+  overflow-x: hidden;
   h2 {
     padding-bottom: 50px;
     text-align: center;
@@ -34,10 +39,11 @@
   border-radius: 150px;
   outline: none;
   padding: 15px;
-  right: -30px;
-  top: -20px;
+  right: -2px;
+  top: -9px;
   position: absolute;
   border: none;
+
   display: flex;
   align-items: center;
   justify-content: center;
