--- a/src/shared/ui/Navigation/Navigation.module.scss
+++ b/src/shared/ui/Navigation/Navigation.module.scss
@@ -19,7 +19,7 @@
   line-height: 24px;
   letter-spacing: -0.274286px;
   font-family: var(--font-mont);
-  color: var(--primary-color);
+  color: var(--color-price-title);
 }
 
 .link {
@@ -28,7 +28,7 @@
   line-height: 24px;
   font-family: var(--font-mont);
   letter-spacing: -0.274286px;
-  color: var(--primary-color);
+  color: var(--color-price-title);
   &:hover {
     color: #bda76a;
   }
