--- a/src/shared/ui/Banner/Banner.module.scss
+++ b/src/shared/ui/Banner/Banner.module.scss
@@ -12,6 +12,12 @@
   position: relative;
 }
 
+.buttons {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
 .color {
   color: $color-khaki;
 }
