--- a/src/shared/ui/FooterTop/FooterTop.module.scss
+++ b/src/shared/ui/FooterTop/FooterTop.module.scss
@@ -176,6 +176,14 @@
   }
 
   .locations {
+    flex: none;
+  }
+
+  .item {
+    text-align: center;
+  }
+
+  .locations {
     .list {
       align-items: flex-start;
     }
