--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -21,6 +21,7 @@
   height: 95vh;
   overflow-y: auto;
   max-width: 1170px;
+  z-index: 9999;
   margin: 0 auto;
   overflow-y: auto;
   overflow-x: hidden;
