--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -31,6 +31,7 @@
   border-radius: 5px;
   padding: 22px 0;
   background: var(--bg-color);
+  width: 200px;
 
   transition: background 0.2s ease;
   &:hover {
