--- a/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
+++ b/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
@@ -1,7 +1,7 @@
 @import "src/styles/variables.scss";
 
 .image_banner {
-  margin-top: 130px;
+  padding-top: 200px;
   display: flex;
 }
 
@@ -62,6 +62,10 @@
 }
 
 @media screen and (max-width: $tableWidth) {
+  .image_banner {
+    padding: 0 5px;
+  }
+
   .image_banner {
     margin-top: 50px;
   }
