--- a/src/shared/ui/Banner/Banner.module.scss
+++ b/src/shared/ui/Banner/Banner.module.scss
@@ -13,8 +13,8 @@
 }
 
 .buttons {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 50px;
 }
 
@@ -67,5 +67,18 @@
   .image {
     width: 100%;
     height: 100%;
+  }
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .buttons {
+    width: 100%;
+  }
+
+  .left_button {
+    width: 100%;
+  }
+  .right_button {
+    width: 100%;
   }
 }
