--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .button {
   font-family: var(--font-mont);
   font-style: normal;
@@ -30,11 +32,20 @@
   border: 2px solid #bda76a;
   border-radius: 5px;
   padding: 22px 0;
-  background: var(--bg-color);
+  background: #fff;
   width: 200px;
+
+  color: #000;
 
   transition: background 0.2s ease;
   &:hover {
     background: var(--hover-color);
+  }
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .button {
+    padding: 10px 25px;
+    font-size: 13px;
   }
 }
