--- a/src/widgets/Footer/Footer.module.scss
+++ b/src/widgets/Footer/Footer.module.scss
@@ -80,6 +80,10 @@
   }
 }
 
+.buttons {
+  display: none;
+}
+
 @media screen and (max-width: $smDesktopWidth) {
   .footer__inner {
     align-items: center;
@@ -103,6 +107,21 @@
 
     a + a {
       padding-left: 0;
+    }
+  }
+
+  .buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    position: fixed;
+    height: 55px;
+    z-index: 222;
+    width: 100%;
+    bottom: 0;
+
+    button {
+      width: 100%;
+      height: 55px;
     }
   }
 }
