--- a/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
+++ b/src/shared/ui/ImageBannerText/ImageBannerText.module.scss
@@ -31,6 +31,12 @@
   width: 55%;
 }
 
+.buttons {
+  display: flex;
+  align-items: self-end;
+  gap: 20px;
+}
+
 .color {
   color: $color-khaki;
 }
@@ -95,5 +101,17 @@
 @media screen and (max-width: $phoneWidth) {
   .center {
     flex-direction: column;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: initial;
+    justify-content: center;
+    gap: 20px;
+
+    button {
+      width: 100%;
+    }
   }
 }
