--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -14,4 +14,5 @@
   --bg-nolayout-color: #0f0f0f;
   --hover-contained-button: #b09a5f;
   --dev-color: #1a1a1a;
+  --color-develop-item: #b09a5f;
 }
