--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -15,4 +15,5 @@
   --hover-contained-button: #b09a5f;
   --dev-color: #1a1a1a;
   --color-develop-item: #b09a5f;
+  --outline-button-color: #fff;
 }
