--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -15,4 +15,5 @@
   --hover-contained-button: #b09a5f;
   --dev-color: #1a1a1a;
   --color-develop-item: #0f0f0f;
+  --outline-button-color: #000;
 }
