fade in, framer motion animation between page

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -35,11 +35,11 @@
   background: #fff;
   width: 200px;
 
-  color: var(--outline-button-color);
+  color: #000;
 
-  transition: background 0.2s ease;
+  transition: background 0.3s ease;
   &:hover {
-    background: var(--hover-color);
+    background: #bda76a;
   }
 }
 
