--- a/src/shared/ui/Awards/Awards.module.scss
+++ b/src/shared/ui/Awards/Awards.module.scss
@@ -25,7 +25,7 @@
   margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
-  padding: 60px 0 50px 50px;
+  padding: 60px 0 0 50px;
   border-radius: 10px;
 
   display: grid;
