--- a/src/shared/ui/Block/Block.module.scss
+++ b/src/shared/ui/Block/Block.module.scss
@@ -5,13 +5,14 @@
 }
 
 .block {
-  display: flex;
-  align-items: center;
   gap: 50px;
   margin: 100px 0;
   max-width: 1170px;
   margin: 0 auto;
   position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
 }
 
 .gray {
@@ -26,7 +27,7 @@
 .white {
   background: var(--bg-color);
   padding: 100px 0;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
 }
 // ######
 .description {
