--- a/src/widgets/Footer/Footer.module.scss
+++ b/src/widgets/Footer/Footer.module.scss
@@ -52,6 +52,11 @@
     letter-spacing: -0.186667px;
     color: var(--secondary-color);
     font-family: var(--font-mont);
+    transition: all 0.2s ease;
+
+    &:hover {
+      color: #bda76a;
+    }
   }
 }
 
