--- a/src/shared/layout/layout.module.scss
+++ b/src/shared/layout/layout.module.scss
@@ -5,6 +5,7 @@
 
 .nolayout {
   max-width: 100%;
+  position: relative;
   margin: 0 auto;
 }
 
@@ -14,4 +15,11 @@
   align-items: center;
   height: 100vh;
   justify-content: center;
+}
+
+.image {
+  display: block;
+  height: 100%;
+  margin: 0 auto;
+  width: 100%;
 }
