--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,12 @@
   margin: 0 auto;
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .app {
   min-height: 100vh;
   background: var(--bg-color);
