--- a/src/widgets/Header/Header.module.scss
+++ b/src/widgets/Header/Header.module.scss
@@ -3,8 +3,8 @@
 .header {
   background: var(--bg-color);
   padding-top: 55px;
-  z-index: 100;
-  position: fixed;
+  z-index: 1500;
+  // position: fixed;
   width: 100%;
   top: 0;
   left: 0;
