--- a/src/widgets/Header/Header.module.scss
+++ b/src/widgets/Header/Header.module.scss
@@ -4,7 +4,7 @@
   background: var(--bg-color);
   padding-top: 55px;
   z-index: 1500;
-  // position: fixed;
+  position: fixed;
   width: 100%;
   top: 0;
   left: 0;
