--- a/src/shared/ui/Contact/Contact.module.scss
+++ b/src/shared/ui/Contact/Contact.module.scss
@@ -2,8 +2,9 @@
 
 .contact {
   display: flex;
-  margin: 80px 0;
   align-items: center;
+  max-width: 1170px;
+  margin: 80px auto;
   margin-bottom: 0;
 }
 .info {
