--- a/src/shared/ui/DescriptionSeo/DescriptionSeo.module.scss
+++ b/src/shared/ui/DescriptionSeo/DescriptionSeo.module.scss
@@ -60,6 +60,24 @@
   align-items: flex-end;
 }
 
+.description_text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 35px;
+  color: #313131;
+  font-family: var(--font-mont);
+
+  padding: 40px 44px 30px 40px;
+
+  p {
+    font-weight: 500;
+    font-size: 25px;
+    margin-top: 15px;
+    line-height: 35px;
+  }
+}
+
 .description_inner {
   font-style: normal;
   font-weight: 500;
@@ -75,6 +93,10 @@
     font-size: 25px;
     margin-top: 15px;
     line-height: 35px;
+
+    &:first-child {
+      margin-top: 0;
+    }
   }
 }
 
