--- a/src/shared/ui/OutComes/OutComes.module.scss
+++ b/src/shared/ui/OutComes/OutComes.module.scss
@@ -37,9 +37,8 @@
 }
 
 .items {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   padding: 85px 0;
 }
 
