--- a/src/shared/common/Modal/Modal.module.scss
+++ b/src/shared/common/Modal/Modal.module.scss
@@ -10,41 +10,31 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 8999;
 }
 
 .popup {
   background: #ffffff;
   border-radius: 10px;
   position: relative;
-  padding: 30px;
-  height: 95vh;
-  overflow-y: auto;
+  padding: 50px 70px;
+  height: 100vh;
   max-width: 1170px;
   z-index: 9999;
   margin: 0 auto;
   overflow-y: auto;
   overflow-x: hidden;
-  h2 {
-    padding-bottom: 50px;
-    text-align: center;
-  }
-
-  button {
-    width: 250px;
-  }
 }
 
 .closeButton {
-  background: #bda76a;
   border-radius: 150px;
   outline: none;
   padding: 15px;
-  right: -2px;
-  top: -9px;
+  right: 0;
+  top: 0;
   position: absolute;
+  user-select: none;
   border: none;
-
   display: flex;
   align-items: center;
   justify-content: center;
