--- a/src/shared/common/Button/Button.module.scss
+++ b/src/shared/common/Button/Button.module.scss
@@ -13,6 +13,11 @@
   border: none;
   text-transform: uppercase;
   cursor: pointer;
+
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
 
 .contained {
