--- a/src/shared/common/Modal/Modal.module.scss
+++ b/src/shared/common/Modal/Modal.module.scss
@@ -18,12 +18,24 @@
   border-radius: 10px;
   position: relative;
   padding: 50px 70px;
-  height: 100vh;
+
   max-width: 1170px;
   z-index: 9999;
   margin: 0 auto;
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+.step7 {
+  height: 100vh;
+}
+
+.step7 .content {
+  height: 100vh;
+}
+
+.step8 .content {
+  height: 100vh;
 }
 
 .closeButton {
