--- a/src/shared/common/Modal/Modal.module.scss
+++ b/src/shared/common/Modal/Modal.module.scss
@@ -60,3 +60,21 @@
 .content {
   margin-top: 10px;
 }
+
+@media screen and (max-width: $phoneWidth) {
+  .popup {
+    padding: 15px 25px;
+  }
+
+  .step1,
+  .step2,
+  .step3,
+  .step4,
+  .step5,
+  .step6,
+  .step7,
+  .step8,
+  .step9 {
+    height: 100%;
+  }
+}
